--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@ dt:after {
 Lately I discovered the joy of focussed writing using minimal interfaces and
 editors. Since the selection of minimal writers available on Linux didn't
 really satisfy me, I thought: this isn't too hard. The design guidelines are:
-
 <ul>
     <li>"minimal"</li>
     <li>One file - so install isn't a hassle</li>
@@ -54,10 +53,14 @@ shortcuts (you don't want to use the mouse while typing!
 <p>
 Clone on <a href="https://github.com/mihi-tr/mnmlwrt">github</a>
 </p>
+<p>
+mnmlwrt is licensed under a BSD 2-clause license. See <a href="LICENSE">LICENSE</a> for details.
+</p>
 <div>
 Files:</br>
 <ul>
 <li><a href="mnmlwrt">mnmlwrt</a></li>
+<li><a href="LICENSE">LICENSE</a></li>
 </ul>
 </body>
 
