--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ really satisfy me, I thought: this isn't too hard. The design guidelines are:
 <p>
 The 4 essentials of a text editor are: 1) creating new files, 2) editing
 files, 3) saving files and 4) opening files. This comes down to 4 keyboard
-shortcuts (you don't want to use the mouse while typing!
+shortcuts (you don't want to use the mouse while typing!)
 
 <dl>
 <dt>ctrl-n</dt><dd>New file</dd>
